Erase input forms when exit out of dialog

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <header></header>
     <div class="booksContainer">
-
+        
     </div>
+    <button class="addButton">Add</button>
     <dialog>
     </dialog>
 </body>
